<resources>
    <string name="app_name">LEO</string>
    <string name="chkbox">Tôi đồng ý với <text color="#25577C"><i><u>Điều khoản Dịch vụ</u></i></text> và <text color="#25577C"><i><u>Thông báo về quyền riêng tư</u></i></text></string>
    <string-array name="radiobtn_image">
        <item>@drawable/hinh6</item>
        <item>@drawable/hinh1</item>
        <item>@drawable/hinh5</item>

    </string-array>
    <string name="dieukhoan">Áp dụng <b>Điều khoản và điều kiện</b> khi đăng ký</string>
    <string name="motthang"> 300,000<U>đ</U></string>
    <string name="bathang"> 700,000<U>đ</U></string>
    <string name="sauthang"> 1,200,000<U>đ</U></string>
    <string name="motnam"> 2,500,000<U>đ</U></string>
    <string name="loadingText">LEARN \n ENGLISH \n ONLINE </string>
    <string name="changePack"><u>Thay đổi gói</u></string>

    <string name="thanhlap">“Love English Organization” được thành lập bởi 4 sinh viên Khoa HTTT - trường Đại học Kinh tế - Luật vào năm 2019 với mục đích giúp người trẻ, đặc biệt là sinh viên có cơ hội cải thiện kĩ năng nói tiếng Anh.
        \t\t\t\t\t\t Năm 2021, “Love English Organization” đánh dấu sự có mặt của mình trên “Internet” bằng ứng dụng học tiếng Anh có tên “LEO” - góp phần lan tỏa giá trị nhân văn của mình và nhũng giá trị xã hội cho cộng đồng người Việt.</string>

    <string name="thanhtichgv">1. Tốt nghiệp đại học Văn Lang bằng cử nhân khoa Khoa học - Xã hội \n2. Đạt bằng IELTS 8.0 \n3. Quán quân chương trình IELTS Face-off 2005</string>

    <string-array name="bdh">
        <item>
            Trọng Tuấn /n
            Minh Trọng /n
            Minh Trí /n
            Long Thuyên
        </item>
    </string-array>
    <string-array name="thanhtich">
        <item>Được tin dung bởi nhiều nơi.</item>
    </string-array>
</resources>